--- a/sikimosya/html/style.css
+++ b/sikimosya/html/style.css
@@ -132,7 +132,6 @@
 }
 
 .sidenav {
-  background-color: #BF9767;
   color: #fff;
   position: relative;
   text-align: center; 
@@ -141,6 +140,11 @@
   letter-spacing: 0.2em;
   padding: 0 ;
   width: 30%;
+  background-color: #F2F2F2;
+}
+
+.sidenav h2 {
+  background-color: #BF9767;
 }
 
 .side_list {
@@ -149,7 +153,6 @@
   font-size: 0.8rem;
   line-height: 4;
   padding-top: 20px;
-  background-color: #F2F2F2;
 }
 
 .side_list li {
@@ -160,7 +163,6 @@
   box-sizing: border-box;
   /* position: absolute; */
   top: 1650px;
-  background: #F2F2F2;
   color: #333;
 }
 
@@ -176,7 +178,6 @@
   top: 1800px;
   line-height: 1.75em;
   left: 20px;
-  background-color: #F2F2F2;
 }
 
 .page {
