--- a/sikimosya/html/style.css
+++ b/sikimosya/html/style.css
@@ -79,7 +79,7 @@
 }
 
 .main_visual_side {
-  width: 30%;
+  width: 15%;
   font-size: 1rem;
   background-color: #F2F2F2;
 }
@@ -89,13 +89,13 @@
 }
 
 .main_visual {
-  width: 70%;
-  height: 300px;
+  width: 85%;
   margin: 0 auto;
 }
 
 .main_visual img {
   width: 100%;
+  vertical-align: top;
 }
 
 .top_catchcopy span {
@@ -127,24 +127,22 @@
 
 .main_visual_block2 {
   position: relative;
-  padding-top: 520px;
   display: flex;
 }
 
 .sidenav {
-  color: #fff;
   position: relative;
-  text-align: center; 
   width: 270px;
   font-size: 1rem;
   letter-spacing: 0.2em;
   padding: 0 ;
-  width: 30%;
+  width: 15%;
   background-color: #F2F2F2;
 }
 
 .sidenav h2 {
   background-color: #BF9767;
+  color: #fff;
 }
 
 .side_list {
@@ -153,6 +151,7 @@
   font-size: 0.8rem;
   line-height: 4;
   padding-top: 20px;
+  padding-left: 0;
 }
 
 .side_list li {
@@ -164,13 +163,15 @@
   /* position: absolute; */
   top: 1650px;
   color: #333;
+  padding-left: 0;
 }
 
 .side_contact li {
   display: block;
-  text-align: center;
-  padding: 10px 0 14px 0;
-  margin: 10px ;
+  padding: 10px 0 14px 10px;
+  margin: 10px 10px 0 0;
+  background-color: #42a995;
+  color: #fff;
 }
 
 .side_contact2 {
@@ -180,6 +181,122 @@
   left: 20px;
 }
 
+.fa-phone:before {
+    background-color: #FFF;
+    padding: 2px;
+    border-radius: 3px;
+}
+
+.fa-envelope:before {
+  color: #FFf;
+  font-size: 22px;
+}
+
 .page {
-  width: 70%;
+  width: 85%;
+}
+
+.section-title {
+  display: flex;
+}
+
+.title {
+  position: absolute;
+  color: rgba(66,169,149,0.2);
+  font-size: 70px;
+  font-weight: bold;
+  padding-left: 150px;
+}
+
+.heading {
+  font-size: 30px;
+  padding-left: 150px;
+  padding-top: 95px;
+  line-height: 3.7rem;
+}
+
+.frame {
+  display: inline-block;
+  background: rgb(194,183,139,0.4);
+  width: 200%;
+}
+
+.btn  {
+  position: absolute;
+  margin-left: 150px;
+  margin-top: 350px;
+  background: #42A995;
+  max-width: 300px;
+  border-radius: 23px;
+  font-size: 1.3rem;
+  letter-spacing: 0.3rem;
+  text-align: center;
+  color: #FFF;
+  padding: 10px 100px;
+}
+
+.top_about_img img {
+  max-width: 100%;
+  width: 50%;
+  padding-left: 400px;
+  padding-top: 80px;
+}
+
+.menu {
+  display: flex;
+  background: rgb(194,183,139,0.2);
+  margin-top: 80px;
+  padding-bottom: 170px;
+}
+
+.title-menu {
+  color: rgba(66,169,149,0.2);
+  font-size: 70px;
+  font-weight: bold;
+  padding-left: 400px;
+}
+
+.menu-heading {
+  font-size: 30px;
+  margin: 130px 0px 0px -160px;
+  color: #42A995;
+}
+
+.menu-text {
+  margin: 180px 0px 0px -250px;
+  font-size: 16px;
+  letter-spacing: 0.2rem;
+}
+
+.btn-menu {
+  position: absolute;
+  margin: 260px 0px 0px 330px;
+  background: #42A995;
+  max-width: 300px;
+  border-radius: 23px;
+  font-size: 1.3rem;
+  letter-spacing: 0.3rem;
+  text-align: center;
+  color: #FFF;
+  padding: 10px 100px;
+}
+ 
+.top_menu_img img{
+  position: absolute;
+  width: 35%;
+  padding: 50px; 
+}
+
+.title-info {
+  position: absolute;
+  color: rgba(66,169,149,0.2);
+  font-size: 70px;
+  font-weight: bold;
+  padding-left: 150px;
+}
+
+.info-heading {
+  font-size: 30px;
+  padding: 130px 0 0 150px;
+  color: #42A995;
 }
