--- a/sikimosya/html/style.css
+++ b/sikimosya/html/style.css
@@ -722,6 +722,19 @@
   .hamburger p{
     display: none;
   }
+
+  #menu-btn-check:checked ~ .menu-btn span {
+    background-color: rgba(255, 255, 255, 0);/*メニューオープン時は真ん中の線を透明にする*/
+}
+
+#menu-btn-check:checked ~ .menu-btn span::before {
+  bottom: 0;
+  transform: rotate(45deg);
+}
+#menu-btn-check:checked ~ .menu-btn span::after {
+  top: 0;
+  transform: rotate(-45deg);
+}
 }
 
 @media screen and (max-width: 1000px) {
