--- a/sikimosya/html/style.css
+++ b/sikimosya/html/style.css
@@ -680,7 +680,7 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .hamburger span{
+  .menu-btn span{
     position: absolute;
    top: 50%;
    left: 15%;
@@ -693,29 +693,23 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .hamburger::before {
-   content: '';
-   display: block;
-   position: absolute;
-   top: 25%;
-   left: 15%;
-   width: 70%;
-   height: 2px;
-   background-color: #fff;
-  }
+  .menu-btn span:before,
+.menu-btn span:after {
+    content: '';
+    display: block;
+    height: 3px;
+    width: 25px;
+    border-radius: 3px;
+    background-color: #ffffff;
+    position: absolute;
+}
 }
 
-@media screen and (max-width: 1000px) {
-  .hamburger::after {
-   content: '';
-   display: block;
-   position: absolute;
-   bottom: 25%;
-   left: 15%;
-   width: 70%;
-   height: 2px;
-   background-color: #fff;
-  }
+.menu-btn span:before {
+  bottom: 8px;
+}
+.menu-btn span:after {
+  top: 8px;
 }
 
 @media screen and (max-width: 1000px) {
@@ -727,13 +721,13 @@
     background-color: rgba(255, 255, 255, 0);/*メニューオープン時は真ん中の線を透明にする*/
 }
 
-#menu-btn-check:checked ~ .menu-btn span::before {
+.menu-btn span::before {
   bottom: 0;
-  transform: rotate(45deg);
+  /*transform: rotate(45deg);*/
 }
-#menu-btn-check:checked ~ .menu-btn span::after {
+.menu-btn span::after {
   top: 0;
-  transform: rotate(-45deg);
+  /*transform: rotate(-45deg);*/
 }
 }
 
