--- a/sikimosya/html/style.css
+++ b/sikimosya/html/style.css
@@ -698,7 +698,7 @@
     content: '';
     display: block;
     height: 3px;
-    width: 25px;
+    width: 100%;
     border-radius: 3px;
     background-color: #ffffff;
     position: absolute;
@@ -706,10 +706,10 @@
 }
 
 .menu-btn span:before {
-  bottom: 8px;
+  bottom: 15px;
 }
 .menu-btn span:after {
-  top: 8px;
+  top: 15px;
 }
 
 @media screen and (max-width: 1000px) {
@@ -721,15 +721,16 @@
     background-color: rgba(255, 255, 255, 0);/*メニューオープン時は真ん中の線を透明にする*/
 }
 
-.menu-btn span::before {
+#menu-btn-check:checked ~ .menu-btn span::before {
   bottom: 0;
-  /*transform: rotate(45deg);*/
+  transform: rotate(45deg);
 }
-.menu-btn span::after {
+#menu-btn-check:checked ~ .menu-btn span::after {
   top: 0;
-  /*transform: rotate(-45deg);*/
+  transform: rotate(-45deg);
 }
 }
+
 
 @media screen and (max-width: 1000px) {
   .sp-nav {
