--- a/sikimosya/css/menu.css
+++ b/sikimosya/css/menu.css
@@ -24,6 +24,7 @@
 
 .menu-page {
   width: 80%;
+  flex-grow: 1;
 }
 
 .menu-top {
@@ -80,10 +81,11 @@
 .menu-flex-img img {
   height: 370px;
   max-width: 100%;
+  object-fit: cover;
 }
 
 .menu-flex-text {
-  width: 52%;
+  width: 50%;
   padding-left: 30px;
 }
 
