--- a/sikimosya/css/menu.css
+++ b/sikimosya/css/menu.css
@@ -67,6 +67,8 @@
   font-size: 25px;
   border-bottom: solid 2px #42A995;
   padding-bottom: 20px;
+  margin-top: 40px;
+  margin-bottom: 30px;
 }
 
 .menu-flex {
